--- a/src/styles/pages/preference.css
+++ b/src/styles/pages/preference.css
@@ -22,7 +22,7 @@
 
 .preference-card-name {
   @apply uppercase absolute w-full left-0 bottom-0 px-4 py-4 font-bold tracking-wider bg-white flex items-center justify-center;
-  height: 44px;
+  min-height: 44px;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 4px;
