--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -1,10 +1,27 @@
 .header {
-  @apply w-full px-4 py-4 bg-white;
+  @apply w-full px-4 py-4;
+  height: 50px;
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.4);
+}
+
+.header--white {
+  @apply bg-white;
+}
+
+.header--green {
+  @apply bg-gpgreen;
 }
 
 .logo {
   @apply object-contain;
-  padding: 2px 0px;
-  height: 28px;
+  height: 20px;
   z-index: 1;
+}
+
+.header--white .logo--white {
+  display: none;
+}
+
+.header--green .logo--green {
+  display: none;
 }
