--- a/src/styles/utilities/enform.scss
+++ b/src/styles/utilities/enform.scss
@@ -40,6 +40,7 @@
     background-position: calc(100% - 5px) center;
   }
   .en__field--email-ok-hongkong {
+    display: none;
   }
   .en__submit {
     width: 100%;
