--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,16 +13,14 @@
 @import './pages/preference.css';
 
 .speakers {
-  @apply w-full my-8 py-4 flex;
+  @apply w-full my-8 flex;
   max-width: 780px;
   margin-left: auto;
   margin-right: auto;
   justify-content: space-around;
   align-items: flex-start;
-  flex-flow: row nowrap;
-  overflow-x: auto;
-  -webkit-overflow-scrolling: touch;
-  scroll-snap-type: x proximity;
+  flex-flow: row;
+  flex-wrap: wrap;
 }
 
 .speaker {
