--- a/src/styles/components/form.scss
+++ b/src/styles/components/form.scss
@@ -40,5 +40,5 @@
 }
 
 .form-button {
-  @apply shadow block w-full bg-orange-500 text-white text-center font-bold py-4 px-4 rounded;
+  @apply shadow block w-full bg-gporange text-white text-center font-bold py-4 px-4 rounded;
 }
