--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,10 +8,7 @@
 @tailwind base;
 @tailwind components;
 /* purgecss end ignore */
-@import './components/base';
-@import './components/header';
-@import './components/footer';
-@import './components/form';
+@import './components/index';
 /* page styles */
 @import './pages/preference';
 @import './pages/registration';
@@ -19,11 +16,10 @@
 .text {
   @apply text-base tracking-wide mb-4;
 }
-
 /**
  * This injects Tailwind's utility classes and any utility classes registered
  * by plugins.
  */
 @tailwind utilities;
 
-@import './utilities/enform';
+@import './utilities/index';
