create cta template

--- a/src/styles/components/base.scss
+++ b/src/styles/components/base.scss
@@ -52,7 +52,8 @@ body.is-loading .body-spinner {
 }
 
 .main {
-  max-width: 1600px;
+  width: 100%;
+  max-width: 1400px;
   margin-left: auto;
   margin-right: auto;
 }
