--- a/src/styles/components/form.scss
+++ b/src/styles/components/form.scss
@@ -40,5 +40,6 @@
 }
 
 .form-button {
-  @apply shadow block w-full bg-gporange text-white text-center font-bold py-4 px-4 rounded;
+  @apply shadow block w-full bg-gporange text-white text-center font-bold py-2 px-4 rounded;
+  font-size: 20px;
 }
