adding meatfree text

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,7 +16,7 @@
   @apply text-base tracking-wide mb-4;
 }
 .credit-line {
-  @apply text-sm;
+  @apply text-sm pt-2;
 }
 /**
  * This injects Tailwind's utility classes and any utility classes registered
