--- a/src/styles/utilities/index.scss
+++ b/src/styles/utilities/index.scss
@@ -11,7 +11,7 @@
   padding: 0;
   position: absolute;
   width: 1px;
-  white-space: nowrap; /* 1 */
+  white-space: nowrap;
 }
 
 .visuallyhidden.focusable:active,
